--- a/package.json
+++ b/package.json
@@ -15,14 +15,27 @@
     "dash": true
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.0",
+    "@tailwindcss/vite": "^4.1.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "hono": "4.7.5",
+    "lucide-react": "^0.487.0",
+    "next-themes": "^0.4.6",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-router-dom": "^7.5.0",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.0.2",
     "@cloudflare/workers-types": "^4.20250410.0",
     "@eslint/js": "9.23.0",
+    "@types/node": "^22.14.0",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.3.4",
