--- a/tsconfig.worker.json
+++ b/tsconfig.worker.json
@@ -2,7 +2,12 @@
   "extends": "./tsconfig.node.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.worker.tsbuildinfo",
-    "types": ["vite/client", "./worker-configuration.d.ts"]
+    "types": ["vite/client", "./worker-configuration.d.ts"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@types/*": ["./src/types/*"]
+    }
   },
-  "include": ["src/worker"]
+  "include": ["src/worker", "src/types"]
 }
