--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "types": "wrangler types"
   },
   "cloudflare": {
-    "label": "Vite React Template",
+    "label": "Agent Devin",
     "products": [
       "Workers"
     ],
@@ -32,6 +32,7 @@
     "hono": "4.7.5",
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
+    "openai": "^4.96.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^7.5.0",
@@ -52,6 +53,7 @@
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.19",
     "globals": "15.15.0",
+    "miniflare": "^4.20250424.1",
     "typescript": "5.8.2",
     "typescript-eslint": "8.29.0",
     "vite": "6.2.5",
