--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "vite",
     "lint": "eslint .",
     "preview": "npm run build && vite preview",
-    "types": "wrangler types"
+    "types": "wrangler types",
+    "secret": "wrangler secret put"
   },
   "cloudflare": {
     "label": "Agent Devin",
