--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/vite": "^4.1.3",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.5",
@@ -42,6 +43,7 @@
     "lucide-react": "^0.487.0",
     "next-themes": "^0.4.6",
     "openai": "^4.96.0",
+    "pako": "^2.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "^7.5.0",
@@ -56,6 +58,7 @@
     "@cloudflare/workers-types": "^4.20250410.0",
     "@eslint/js": "9.23.0",
     "@types/node": "^22.14.0",
+    "@types/pako": "^2.0.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.3.4",
